# dedent-paste

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  dist-workspace.toml  install.sh  package.json
.github/workflows/: ci.yml  npm-publish.yml  pages.yml  release.yml  version-release.yml
docs/: index.html  robots.txt
examples/macos/: paste-dedent-plain-text.json
examples/windows/: dedent-paste-win-v-v1.ahk  dedent-paste-win-v-v2.ahk
npm/: cli.cjs  postinstall.cjs  prepublish-check.cjs
src/: lib.rs  main.rs
tests/: postinstall.test.cjs
