[package]
name = "dedent-paste"
version = "0.2.0"
edition = "2024"
authors = ["Will 保哥"]
license = "MIT"
repository = "https://github.com/doggy8088/dedent-paste"

[dependencies]

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.1"
windows-sys = { version = "0.61.2", features = ["Win32_UI_Input_KeyboardAndMouse"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
